[package]
name = "xpath-cli"
version = "1.0.0"
description = "Evaluate XPath selectors on XML or HTML documents"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/xpath"
repository = "https://github.com/jake-low/xpath"
license = "ISC"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "cargo"] }
libxml = "0.3.3"

[[bin]]
name = "xpath"
path = "src/main.rs"
