[package]
name = "xpath-cli"
version = "1.1.0"
description = "Evaluate XPath selectors on XML or HTML documents"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/xpath-cli"
repository = "https://github.com/jake-low/xpath-cli"
license = "ISC"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.28", features = ["derive", "cargo"] }
libxml = "0.3.3"
sigpipe = "0.1.3"

[[bin]]
name = "xpath"
path = "src/main.rs"
